@@ -30,11 +30,13 @@ $('body').addClass('enhanced');
 </script>
 
 <script type="text/javascript" src="/static/jquery-ui-1.12.1.custom/jquery-ui.js"></script>
+<script type="text/javascript" src="/static/underscore-min-1.9.1.js"></script>
 <!--[if lt IE 9]>
 <script type="text/javascript" src="/static/html5shiv-printshiv-3.7.3.js"></script><![endif]-->
 <!--[if lte IE 9]>
 <script type="text/javascript" src="/static/IE9.js"></script><![endif]-->
 <script type="text/javascript" src="/static/reahl.hashchange.js"></script>
+<script type="text/javascript" src="/static/reahl.changenotifier.js"></script>
 <script type="text/javascript" src="/static/reahl.ajaxlink.js"></script>
 <script type="text/javascript" src="/static/reahl.textinput.js"></script>
 <script type="text/javascript" src="/static/reahl.validate.js"></script>
